# rust-stm

./: Cargo.toml  openocd.cfg
src/: main.rs
