[package]
authors = ["Tim <timreset@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-stm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"      # Access to the generic ARM peripherals
cortex-m-rt = "0.7.1"  # Startup code for the ARM Core
embedded-hal = "0.2.6"  # Access to generic embedded functions (`set_high`)
panic-halt = "0.2.0"    # Panic handler
cortex-m-semihosting = "0.3.7"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]


[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
